--- a/Rapport3/rapport.tex
+++ b/Rapport3/rapport.tex
@@ -30,7 +30,7 @@ Kasper Nielsen - 20091182\\}
 
 \maketitle
 
-\pagebreak{}\tableofcontents{}\pagebreak{}
+\pagebreak
 
 \section{Sorting}
 \textbf{Problem:} Design an I/O-efficient algorithm for removing duplicate from a multiset of $N$ elements.
